--- a/playbooks/kube.yml
+++ b/playbooks/kube.yml
@@ -79,10 +79,10 @@
           when: __resolv.stat.islnk
           tags: ["resolv"]
 
-    - name: Include common tasks
-      ansible.builtin.include_tasks:
-        file: ../tasks/common_servers.yml
-      tags: ["always"]
+    # - name: Include common tasks
+    #   ansible.builtin.include_tasks:
+    #     file: ../tasks/common_servers.yml
+    #   tags: ["always"]
 
     - name: Configure default NFS mount options
       ansible.builtin.copy:
@@ -113,6 +113,8 @@
         repo_url: "https://prometheus-community.github.io/helm-charts"
       - name: ingress-nginx
         repo_url: "https://kubernetes.github.io/ingress-nginx"
+      - name: grafana
+        repo_url: "https://grafana.github.io/helm-charts"
   tasks:
     - name: Run on localhost
       delegate_to: localhost
@@ -174,3 +176,15 @@
             update_repo_cache: true
             release_values: "{{ lookup('template', '{{ repo_base_dir }}/files/k8s/prom.yml.j2') | from_yaml }}"
           tags: ["helm", "prometheus"]
+
+        # https://github.com/grafana/helm-charts/tree/main/charts/promtail
+        - name: Deploy Promtail chart
+          kubernetes.core.helm:
+            name: promtail
+            chart_ref: grafana/promtail
+            chart_version: "6.x"
+            release_namespace: monitoring
+            create_namespace: false
+            update_repo_cache: true
+            release_values: "{{ lookup('template', '{{ repo_base_dir }}/files/k8s/promtail.yml.j2') | from_yaml }}"
+          tags: ["helm", "promtail"]
