--- a/playbooks/kube.yml
+++ b/playbooks/kube.yml
@@ -100,13 +100,6 @@
 - name: Deploy charts and manifests
   hosts: kube_control_plane[0]
   gather_facts: false
-  pre_tasks:
-    - name: Install Helm diff plugin
-      delegate_to: localhost
-      kubernetes.core.helm_plugin:
-        plugin_path: https://github.com/databus23/helm-diff
-        state: present
-      tags: ["helm", "plugins"]
   vars:
     helm_repos:
       - name: prometheus-community
@@ -115,6 +108,17 @@
         repo_url: "https://kubernetes.github.io/ingress-nginx"
       - name: grafana
         repo_url: "https://grafana.github.io/helm-charts"
+  pre_tasks:
+    - name: Install Helm diff plugin
+      delegate_to: localhost
+      kubernetes.core.helm_plugin:
+        plugin_path: https://github.com/databus23/helm-diff
+        state: present
+      tags: ["helm", "plugins"]
+  roles:
+    - role: fluo
+      when: "'flatcar' in vm_template | lower"
+      tags: ["fluo"]
   tasks:
     - name: Run on localhost
       delegate_to: localhost
