--- a/playbooks/kube.yml
+++ b/playbooks/kube.yml
@@ -108,6 +108,10 @@
         repo_url: "https://kubernetes.github.io/ingress-nginx"
       - name: grafana
         repo_url: "https://grafana.github.io/helm-charts"
+      - name: jetstack
+        repo_url: "https://charts.jetstack.io"
+      - name: cert-manager-webhook-hetzner
+        repo_url: "https://vadimkim.github.io/cert-manager-webhook-hetzner"
   pre_tasks:
     - name: Install Helm diff plugin
       delegate_to: localhost
@@ -192,3 +196,48 @@
             update_repo_cache: true
             release_values: "{{ lookup('template', '{{ repo_base_dir }}/files/k8s/promtail.yml.j2') | from_yaml }}"
           tags: ["helm", "promtail"]
+
+        - name: Cert-manager tasks
+          tags: ["cert-manager"]
+          block:
+            - name: Deploy cert-manager chart
+              kubernetes.core.helm:
+                name: cert-manager
+                chart_ref: jetstack/cert-manager
+                chart_version: "1.x"
+                release_namespace: cert-manager
+                create_namespace: true
+                update_repo_cache: true
+                release_values:
+                  installCRDs: true
+              tags: ["helm"]
+
+            - name: Deploy cert-manager-hetzner chart
+              kubernetes.core.helm:
+                name: cert-manager-webhook-hetzner
+                chart_ref: cert-manager-webhook-hetzner/cert-manager-webhook-hetzner
+                chart_version: "1.x"
+                release_namespace: cert-manager
+                create_namespace: false
+                update_repo_cache: true
+                release_values:
+                  groupName: "{{ cert_manager_group_name }}"
+              tags: ["helm"]
+
+            - name: Create hetzner secret
+              kubernetes.core.k8s:
+                state: present
+                resource_definition:
+                  apiVersion: v1
+                  kind: Secret
+                  metadata:
+                    name: hetzner-secret
+                    namespace: cert-manager
+                  type: Opaque
+                  data:
+                    api-key: "{{ cert_manager_hetzner_secret | b64encode }}"
+
+            - name: Create hetzner cluster issuer
+              kubernetes.core.k8s:
+                state: present
+                resource_definition: "{{ lookup('template', '{{ repo_base_dir }}/files/k8s/cluster-issuer.yml.j2') | from_yaml }}"
