--- a/inventory/group_vars/k8s_cluster/all.yml
+++ b/inventory/group_vars/k8s_cluster/all.yml
@@ -30,6 +30,9 @@ upstream_dns_servers: "{{ vm_default_nic.dns_servers[:2] }}"
 disable_host_nameservers: true
 auto_renew_certificates: true
 metrics_server_enabled: true
+# Required for Prometheus to work properly
+# https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeproxydown/
+kube_proxy_metrics_bind_address: "0.0.0.0:10249"
 
 # Auto-updates handled by FLUO
 coreos_locksmithd_disable: true
