--- a/tasks/kvm_hypervisors.yml
+++ b/tasks/kvm_hypervisors.yml
@@ -8,7 +8,7 @@
   register: __rtc_local
   tags: ["rtc"]
 
-- name: Ensure system clock is using UTC
+- name: Ensure system clock is using UTC  # noqa no-changed-when
   ansible.builtin.command:
     cmd: timedatectl set-local-rtc 0
   when: __rtc_local.stdout.strip() == 'LocalRTC=yes'
@@ -36,7 +36,7 @@
       register: __subvols
       tags: ["subvols"]
 
-    - name: Create missing subvolumes
+    - name: Create missing subvolumes  # noqa no-changed-when
       ansible.builtin.command: "btrfs sub create {{ btrfs_root }}/{{ item }}"
       loop: "{{ btrfs_subvols | default([]) }}"
       when: item not in __subvols.stdout_lines
@@ -48,7 +48,7 @@
         state: directory
         owner: root
         group: root
-        mode: 0755
+        mode: "0755"
       tags: ["snapshots"]
 
     - name: Mount snapshots subvolume
@@ -66,7 +66,7 @@
         state: directory
         owner: root
         group: root
-        mode: 0700
+        mode: "0700"
       when: swapfile_path | default('')
       tags: ["swap"]
 
@@ -122,6 +122,7 @@
     dest: "/etc/cockpit/ws-certs.d/99-live.{{ item }}"
     follow: false
     state: link
+    force: true
   loop: ["crt", "key"]
   tags: ["cockpit"]
 
