--- a/inventory/group_vars/k8s_cluster/libvirt.yml
+++ b/inventory/group_vars/k8s_cluster/libvirt.yml
@@ -2,9 +2,7 @@
 
 vm_mem: 6144
 vm_root_size: "50G"
-# Sort to ensure it's consistent between runs
-__vm_host_list: "{{ ['theia'] + (groups['thinkcentre'] | sort) }}"
-vm_host: "{{ __vm_host_list[groups['k8s_cluster'] | ansible.utils.index_of('eq', inventory_hostname) % (__vm_host_list | length)] }}"
+vm_host: "{{ vm_host_list[groups['k8s_cluster'] | ansible.utils.index_of('eq', inventory_hostname) % (vm_host_list | length)] }}"
 vm_template: "flatcar.raw"
 vm_customize: false
 vm_qemu_args:
