--- a/inventory/group_vars/swarm/libvirt.yml
+++ b/inventory/group_vars/swarm/libvirt.yml
@@ -2,6 +2,4 @@
 
 vm_mem: 8192
 vm_root_size: "50G"
-# Sort to ensure it's consistent between runs
-__vm_host_list: "{{ ['theia'] + (groups['thinkcentre'] | sort) }}"
-vm_host: "{{ __vm_host_list[groups['swarm'] | ansible.utils.index_of('eq', inventory_hostname) % (__vm_host_list | length)] }}"
+vm_host: "{{ vm_host_list[groups['swarm'] | ansible.utils.index_of('eq', inventory_hostname) % (vm_host_list | length)] }}"
