--- a/inventory/host_vars/theia/firewall.yml
+++ b/inventory/host_vars/theia/firewall.yml
@@ -1,46 +1,16 @@
 ---
 
-firewalld_zones: "{{ __cluster_firewalld_zones + __host_firewalld_zones }}"
-firewalld_services: "{{ __cluster_firewalld_services + __host_firewalld_services }}"
-firewall_rules: "{{ __cluster_firewall_rules + __host_firewall_rules }}"
+node_exporter_config_firewall: true
 
-__host_firewalld_zones:
-  - name: internal
-    interfaces:
-      - MGMT
-      - SAN
-
-  - name: public
-    interfaces:
-      - GENERAL
-      - VM
-      - NOINET
-
+__group_firewalld_rules: []
+__firewall_ssh_public: "present"
+__firewal_cockpit_zone: "public"
 __host_firewalld_services:
-  - name: cockpit
-    zone: public
-    state: absent
-
-  - name: samba-client
-    zone: internal
-    state: absent
-
-  - name: samba-client
-    zone: public
-    state: absent
-
-  - name: nfs3
-    zone: internal
-
   - name: nfs3
     zone: public
 
   - name: samba
     zone: public
-
-  - name: cockpit
-    zone: public
-    sources: "{{ firewall_trusted_sources }}"
 
 __host_firewall_rules:
   - port: 8384
