--- a/inventory/host_vars/theia/vars.yml
+++ b/inventory/host_vars/theia/vars.yml
@@ -22,3 +22,4 @@ grub_config:
     line: GRUB_CMDLINE_LINUX="rd.lvm.lv=main01/root rd.lvm.lv=main02/root crashkernel=auto nmi_watchdog=0"
 swapfile_path: ""
 ssh_conf_hosts: false
+ceph_mon: false
