--- a/inventory/group_vars/swarm/vars.yml
+++ b/inventory/group_vars/swarm/vars.yml
@@ -14,3 +14,7 @@ docker_registries:
   - url: "{{ gitlab_registry_external_url | regex_replace('^https?://', '') }}"
     username: "{{ vault_gitlab_token_name }}"
     password: "{{ vault_gitlab_token_value }}"
+
+docker_node_labels:
+  cpu_tier: "{{ hostvars[vm_host].cpu_tier }}"
+  vm_host: "{{ vm_host }}"
