[auto-ssh] Add var to set known_hosts mode
Useful for Unraid where /root/.ssh is a symlink to a FAT partition.

--- a/roles/auto_ssh/defaults/main.yml
+++ b/roles/auto_ssh/defaults/main.yml
@@ -21,3 +21,4 @@ ssh_dest_create_dir: true
 ssh_conf_hosts: false
 ssh_known_hosts_file: "{{ ssh_src_dir }}/known_hosts"
 ssh_known_hosts_config: true
+ssh_known_hosts_mode: "0644"
