--- a/roles/auto_ssh/tasks/known_hosts.yml
+++ b/roles/auto_ssh/tasks/known_hosts.yml
@@ -44,10 +44,7 @@
     marker: "# {mark} {{ ssh_hosts_comment }}"
     create: true
     mode: "{{ ssh_known_hosts_mode }}"
-    block: |
-      {% for k in __host_keys.results | map(attribute='stdout') | sort %}
-      {{ k }}
-      {% endfor %}
+    block: "{{ __host_keys.results | map(attribute='stdout_lines') | flatten | sort | join('\n') }}"
 
 - name: Add target host names to /etc/hosts
   ansible.builtin.blockinfile:
