--- a/inventory/group_vars/backup/borg.yml
+++ b/inventory/group_vars/backup/borg.yml
@@ -1,18 +1,16 @@
 ---
 
 borg_user: "backup"
+borg_group: "backup"
 borg_uid: 1002
 borg_gid: 1002
 borg_create_home: false
 borg_home: "/home/{{ borg_user }}"
 borg_pool: "{{ borg_home }}/repos"
-borg_local_repo: false
 borg_server: true
-borg_auth_users:
-  - host: desktop
-    key: "{{ hostvars.desktop.ssh_keys.root }}"
-  - host: rtv
-    key: "{{ hostvars.romsto.ssh_keys.root }}"
 
-# Convenience variable for other hosts
-borg_remote_repo: "ssh://{{ borg_user }}@{{ ansible_host }}{{ borg_pool }}"
+borg_ssh_check: "{{ borg_user }}@{{ inventory_hostname }}.{{ domain }}"
+borg_remote_repo: "ssh://{{ borg_ssh_check }}/."
+
+borg_ssh_check_ip: "{{ borg_user }}@{{ ansible_host }}"
+borg_remote_repo_ip: "ssh://{{ borg_ssh_check_ip }}/."
