--- a/inventory/group_vars/gitlab/borg.yml
+++ b/inventory/group_vars/gitlab/borg.yml
@@ -4,20 +4,13 @@ borg_backups:
   - name: "gitlab"
     timer_description: "Backup gitlab every Friday night"
     oncalendar: "Fri *-*-* 23:00:00"
+    target_host: "backup01"
     passphrase: "{{ hostvars['backup01'].borg_server_passphrase }}"
-    repo: "{{ hostvars['backup01'].borg_remote_repo }}/{{ ansible_hostname }}"
-    backup_name: "gitlab"
     paths:
       - "/var/opt/gitlab"
     create_args:
-      - "--stats"
-      - "--show-rc"
-      - "--compression auto,zstd"
-      - "--exclude-caches"
       - "--one-file-system"
     prune_args:
-      - "--list"
-      - "--show-rc"
       - "--keep-daily 1"
       - "--keep-weekly 3"
       - "--keep-monthly 2"
