--- a/inventory/group_vars/prom/borg.yml
+++ b/inventory/group_vars/prom/borg.yml
@@ -4,21 +4,14 @@ borg_backups:
   - name: "prom"
     timer_description: "Backup Prometheus every midnight"
     oncalendar: "*-*-* 00:00:00"
+    target_host: "backup01"
     passphrase: "{{ hostvars['backup01'].borg_server_passphrase }}"
-    repo: "{{ hostvars['backup01'].borg_remote_repo }}/{{ ansible_hostname }}"
-    backup_name: "prom"
     paths:
       - "/var/lib/prometheus"
       - "/var/lib/thanos"
     create_args:
-      - "--stats"
-      - "--show-rc"
-      - "--compression auto,zstd"
-      - "--exclude-caches"
       - "--one-file-system"
     prune_args:
-      - "--list"
-      - "--show-rc"
       - "--keep-daily 3"
       - "--keep-weekly 2"
       - "--keep-monthly 1"
