--- a/inventory/host_vars/desktop/borg.yml
+++ b/inventory/host_vars/desktop/borg.yml
@@ -6,51 +6,35 @@ borg_backups:
     timer_description: "Backup root to server every 7 days at 20:00"
     oncalendar: "*-*-01/7 20:00:00"
     passphrase: "{{ borg_desktop_passphrase }}"
-    repo: "{{ hostvars['backup01'].borg_remote_repo }}/{{ ansible_hostname }}/arch"
-    backup_name: "{{ ansible_hostname }}"
+    target_host: "backup01"
+    archive_name: "{{ ansible_hostname }}"
+    archive_path: "arch"
     pre_run: |
-      if ! ssh -q -o "BatchMode=yes" {{ hostvars['backup01'].borg_user }}@{{ hostvars['backup01'].ansible_host }} exit &>/dev/null
-      then
-          echo "Cannot SSH into remote server"
-          exit 1
-      fi
       BACKUP_USER_HOME=$(getent passwd {{ my_user }} | cut -d : -f 6)
-      export BORG_RELOCATED_REPO_ACCESS_IS_OK=yes
     paths:
       - "/"
       - "/boot"
       - "/home"
       - "${BACKUP_USER_HOME}"
     create_args:
-      - "--stats"
-      - "--show-rc"
-      - "--compression auto,zstd"
       - "--one-file-system"
-      - "--exclude-caches"
       - "--exclude 're:^(/dev|/proc|/sys|/tmp|/run)'"
       - "--exclude '/home/*/.cache'"
       - "--exclude '/home/*/.local/share/baloo'"
       - "--exclude '/home/*/.local/share/containers'"
       - "--exclude '/**/.snapshots'"
     prune_args:
-      - "--list"
-      - "--show-rc"
       - "--keep-daily 4"
       - "--keep-weekly 2"
       - "--keep-monthly 3"
+
   - name: "windows"
     timer_description: "Backup windows to server every 3 days at 21:00"
     oncalendar: "*-*-01/3 21:00:00"
     passphrase: "{{ borg_desktop_passphrase }}"
-    repo: "{{ hostvars['backup01'].borg_remote_repo }}/{{ ansible_hostname }}/windows"
-    backup_name: "{{ ansible_hostname }}"
+    target_host: "backup01"
+    archive_name: "{{ ansible_hostname }}"
     pre_run: |
-      if ! ssh -q -o "BatchMode=yes" {{ hostvars['backup01'].borg_user }}@{{ hostvars['backup01'].ansible_host }} exit &>/dev/null
-      then
-          echo "Cannot SSH into remote server"
-          exit 1
-      fi
-      export BORG_RELOCATED_REPO_ACCESS_IS_OK=yes
       drives=('c' 'd')
       declare -a unlocked
       declare -a mounted
@@ -92,18 +76,12 @@ borg_backups:
       - "/win_d/Programs"
       - "/win_d/src"
     create_args:
-      - "--stats"
-      - "--show-rc"
-      - "--compression auto,zstd"
       - "--noatime"
       - "--nobsdflags"
-      - "--exclude-caches"
       - "--exclude '/win_c/Users/Andrei/AppData/Local/Packages/Spotify*'"
       - "--exclude '/win_c/Users/Andrei/Downloads'"
       - "--exclude '/win_d/src/valve-leak'"
     prune_args:
-      - "--list"
-      - "--show-rc"
       - "--keep-daily 4"
       - "--keep-weekly 2"
       - "--keep-monthly 3"
