--- a/roles/borg/tasks/install.yml
+++ b/roles/borg/tasks/install.yml
@@ -1,13 +1,13 @@
 ---
-- name: Include OS-specific variables.
-  include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Install EPEL
   ansible.builtin.include_role:
     name: epel
-  when: ansible_os_family == 'RedHat'
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution != 'Fedora'
 
-- name: Install borg
-  package:
+- name: Install borg with package manager
+  ansible.builtin.package:
     name: "{{ borg_package_name }}"
     state: present
