--- a/inventory/group_vars/gitlab/borg.yml
+++ b/inventory/group_vars/gitlab/borg.yml
@@ -4,8 +4,8 @@ borg_backups:
   - name: "gitlab"
     timer_description: "Backup gitlab every Friday night"
     oncalendar: "Fri *-*-* 23:00:00"
-    target_host: "backup01"
-    passphrase: "{{ hostvars['backup01'].borg_server_passphrase }}"
+    target_host: "theia"
+    passphrase: "{{ borg_libvirt_passphrase }}"
     paths:
       - "/var/opt/gitlab"
     create_args:
