Update borg flags
Warning: "--noatime" has been deprecated because it is the default now.
Warning: "--nobsdflags" has been deprecated. Use --noflags instead.

--- a/inventory/host_vars/desktop/borg.yml
+++ b/inventory/host_vars/desktop/borg.yml
@@ -79,8 +79,7 @@ borg_backups:
       - "/win_d/Programs"
       - "/win_d/src"
     create_args:
-      - "--noatime"
-      - "--nobsdflags"
+      - "--noflags"
       - "--exclude '/win_c/Users/Andrei/AppData/Local/Packages/Spotify*'"
       - "--exclude '/win_c/Users/Andrei/Downloads'"
       - "--exclude '/win_d/src/valve-leak'"
