--- a/inventory/group_vars/k8s_cluster/metallb.yml
+++ b/inventory/group_vars/k8s_cluster/metallb.yml
@@ -1,10 +1,13 @@
 ---
 
 metallb_enabled: true
-metallb_protocol: bgp
-metallb_ip_range:
-  - "{{ kube_subnet.lb.cidr }}"
-
 # Advertised by calico
 metallb_speaker_enabled: false
-metallb_avoid_buggy_ips: true
+metallb_config:
+  address_pools:
+    primary:
+      ip_range:
+        - "{{ kube_subnet.lb.cidr }}"
+      auto_assign: true
+  layer2:
+    - primary
